--- a/style.css
+++ b/style.css
@@ -3,44 +3,49 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 header ,main {
-    margin: 40px;
-    margin-top: 40px;
+    margin: 2.5rem;
+    margin-top: 2.5rem;
 }
 .top-head{
     text-align: center;
-    width: 100%;
+    max-width: 100%;
     background-color: #1E1E1E;
     color: white;
-    display: flex;
-    border-radius: 15px;
-    margin-bottom: 50px;
-    bottom: 130px;    
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    border-radius: 1rem;
+    margin-bottom: 3.125rem;
+    bottom: 8.125rem;    
 }
 .head-article{
-   width: 50%;
+   max-width:30rem;
    text-align: justify;
-   margin-left: 80px;
-   margin-top: 50px;
+   margin: 3rem;
+   margin-top: 3.125rem;
 }
-.head-article-h1{
-   font-size: 30px;
-}
+
 p{
-    font-size: 15px;
-    margin-bottom: 30px;
+    font-size: 1rem;
+    margin-bottom: 1.875rem;
 }
 .btn-live{
-    font-size: 20px;
-    padding: 20px;
+    font-size: 1.25rem;
+    padding: 1.25rem;
     background-color:#DD0000;
-    border-radius: 15px;
+    border-radius: 1rem;
     color: whitesmoke;
     border: none;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
+}
+.image{
+    min-width: 50%;
 }
 
 .fa-tv{
-    margin-left: 10px;
+    margin-left: 0.625rem;
 }
 /* -----------------------------
 End::header::section one = top-head  
@@ -50,31 +55,32 @@ End::header::section one = top-head
     display: flex;
 }
 .side-navbar{
-    width: 25%;
+    min-width: 25%;
     margin-right: 1%;
 }
-.blog-article-container{
-    background-color: #E6E6E6;
+.blog{
+    border: 1px solid #E8E8E8;
+    border-radius: 0.625rem;
 }
 .important-nav{
-    width:80%;
-    height: 200px;
+    min-width:80%;
+    height: 12.5rem;
     background-color: #161616;
-    margin: 30px auto;
-    border-radius: 10px;
-    padding: 20px;
+    margin: 1.875rem auto;
+    border-radius: 0.625rem;
+    padding: 1.25rem;
 }
 .upcoming-match ,.all-group{
-  margin: 15px auto;
+  margin: 1rem auto;
   color: black;
-  width: 200px;
-  height: 10px;
-  padding: 20px;
+  width: 12.5rem;
+  height: 0.625rem;
+  padding: 1.25rem;
   background-color: white;
   text-align: center;
-   font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 700;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 .players-blog{
     margin: 15px auto;
@@ -130,24 +136,22 @@ End::header::section one = top-head
     display: grid;
     grid-template-columns: repeat(3,1fr);
     column-gap: 2%;
-    row-gap: 30px;
-    padding-bottom: 50px ;
+    row-gap: 1.875rem;
+    padding-bottom: 3.125rem ;
 
 }
 .match{
-    border: 1px solid gray;
+    border: 1px solid #E8E8E8;
+    border-radius: 0.625rem;
     text-align: center;
 }
 .match .thumbnail-flag span {
-    margin-top: 10px;
-    padding: 10px;
+    margin-top: 0.625rem;
+    padding: 0.625rem;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-span{
-    
 }
 
 /* End:: match.html file all css */
@@ -155,19 +159,20 @@ span{
  End::main:: Section Two =  blog-container
  ----------------------------------- */
 
+/* Start:: footer section */
 .footer{
-    min-height: 200px;
-    width: 100%;
+    min-height: 12.5rem;
+    max-width: 100%;
     text-align: center;
     background-color:#161616 ;
 }
 .footer-heading{
-    padding-top: 50px;
-    margin-bottom: 30px;
+    padding-top: 3rem;
+    margin-bottom: 1.875rem;
     color: #FFFFFF;
 }
 hr{
-    width: 80%;
+    max-width: 80%;
     border:1px solid #2C2C2C;
     margin-bottom: 30px;
 }
@@ -199,3 +204,136 @@ ul{
 }
 
 
+/* End:: footer section */
+
+/*---------------------------
+ Start:: Media Queries  
+ ----------------------------*/
+
+ /*---- Mobile Devices------ */
+
+ /*----Mobile: blog.html file----*/
+@media only screen and (max-width:688px){
+    body{
+        background-color: grey;
+    }
+    .top-head{
+        display: grid;
+        grid-template-columns:repeat(1,1fr);
+        
+    }
+    .blog-container{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        object-fit: fill;
+        text-align: justify;
+    }
+    .blog-article-container{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        object-fit: fill;
+        margin: 1rem;
+    }
+    .view{
+        display: none;
+    }
+    .footer-navbar ul li{
+        display: flex;
+        flex-direction: column;
+    }
+    .social-media-icons a{
+        display: flex;
+        flex-direction: column;
+    }
+    .image img{
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+    }
+    
+
+ /*----Mobile: match.html file----*/
+.matches{
+       display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        object-fit: fill;
+        margin: 1rem;
+}
+}
+
+ /*---- Tab Devices------ */
+
+ /*----Tab: blog.html file----*/
+ @media only screen and (min-width:688px) and
+  (max-width:992px){
+    .top-head{
+        background-color: greenyellow;
+    }
+    .head-article{
+        color: black;
+     }
+     .blog-container{
+        display: grid;
+    }
+    .upcoming-match, .all-group, .players-blog{ 
+        display: inline-block;
+        color: green;
+        padding: 20px;
+
+    }
+    .important-nav{
+        max-width:100%;
+        height: 5rem;
+        background-color: #161616;
+        text-align: center; 
+        border-radius: 0.625rem;
+        padding: 2.25rem;
+    }
+    .blog-article-container{
+        min-width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2%;
+        row-gap: 2rem;
+        padding-bottom: 3rem ;
+        text-align: center;
+    }
+        
+        .view{
+            text-align: center;
+            padding: 15px;
+            border-radius: 20px;
+            color: white;
+            width: 8rem;
+            background-color: red;
+            margin-left: 45%;
+            font-size: 30px;
+
+     }
+      /*----Mobile: match.html file----*/
+    .matches{
+    display: grid;
+     grid-template-columns: repeat(2,1fr);
+     justify-content: center;
+     align-items: center;
+     width: 100%;
+     object-fit: fill;
+     margin: 1rem;
+}
+        
+    }
+    /* This section use for hide view element for large device  */
+    @media only screen and (min-width:993px)
+    {
+        .view{
+            display: none;
+        }
+  }
+  
